fix: product card text went invisible in an update

--- a/ah-dark.css
+++ b/ah-dark.css
@@ -51,6 +51,7 @@ h5[class*="product-info_collapsibleTitle"] {
   color: var(--main-text-color);
 }
 
+.title_lineclamp__1ssbk,
 .taxonomy-card_titleLink__7TTrF,
 .alphabet_link__1XlLp,
 .shop-in-shop-button_cta__38gwt,
